Fixed buttons - spacing and look

--- a/src/styles.css
+++ b/src/styles.css
@@ -83,15 +83,19 @@ ul {
 }
 .search-buttons-bar {
   line-height: 1.9;
-  margin-left: 375px;
 }
 .search-bar {
+  width: 400px;
+}
+.search-input-button {
   padding: 0;
-  width: 320px;
 }
 .current-location-button {
   border-width: 1px;
-  border-radius: 4px;
+  border-radius: 2px;
+  color: -internal-light-dark(black, white);
+  padding-bottom: 2px;
+  padding-top: 2px;
 }
 .five-day-forecast {
   font-size: 15px;
